upd: migrate to float, check withdraws borders
